[metadata]
name = gedcomx_v1
version = attr: gedcomx_v1.__version__
author = Jean Michault
author_email = author@example.com
description = gedcomx_v1
url = https://github.com/jmichault/gedcomx
keywords = genealogio, gedcomx
project_urls =
	Bug Tracker = https://github.com/jmichault/gedcomx/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: POSIX :: Linux
license = GNU General Public License v3.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = gedcomx_v1
include_package_data = False
python_requires = >=3.7
install_requires =
	requests

[options.package_data]
gedcomx_v1 = *

[codespell]
ignore-words-list = ot
skip = *.html,*.js,*.json,*.po,*.pot
